fix(css): remove CSS that prevents <code> from wrapping
- This fixes an issue with an option table which stretches causing horizontal scrolling

--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -630,12 +630,6 @@ body {
     font-weight: normal;
   }
 
-  td:not(:first-child):not(:last-child) {
-    code {
-      white-space: nowrap;
-    }
-  }
-
   pre > code {
     background-color: transparent;
     padding: 0;
